# simple-chatbot-langchain-openai

./: Building-a-Simple-Chatbot-using-LangChain-and-OpenAI.ipynb  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
simplechatbot/: app.py
simplechatbot/static/: script.js  style.css
simplechatbot/templates/: index.html
