[tool.poetry]
name = "simple-chatbot-langchain-openai"
version = "0.1.0"
description = ""
authors = ["Agustin Barto <abarto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.1"
openai = "^1.30.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
gradio = "^4.31.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
